# momentum-factor-study

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/cleaned/: ff5_umd_monthly.csv  ff_regression_table.csv  ff_regression_table.tex  masked_prices_survivorship.csv  monthly_adjclose_union.csv  returns_survivorship.csv  sp500_membership_monthly.csv  strategy_gross_survivorship.csv  strategy_net_survivorship.csv  strategy_turnover_survivorship.csv  summary_stats.csv  tc_sensitivity.csv
paper/: paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  references.bib
paper/tables/: summary_stats.tex
src/: analysis_ff_alpha.py  analysis_plots.py  analysis_summary.py  analysis_survivorship_free.py
src/data/: build_sp500_history.py  download_prices_by_union.py  fetch_ff5_umd.py  panel_from_membership.py  turnover.py
tests/: conftest.py  test_analysis_ff_alpha.py  test_analysis_summary.py  test_build_sp500_history.py  test_fetch_ff5_umd.py  test_panel_from_membership.py  test_turnover.py
